# haskell-src-exts

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CONTRIBUTING.md  HISTORY  LICENSE  README  README.md  RELEASENOTES-1.17.0  Setup.hs  ci-test  haskell-src-exts.cabal
Language/Haskell/: Exts.hs
Language/Haskell/Exts/: Build.hs  Lexer.hs  ParseMonad.hs  ParseUtils.hs  Parser.ly  Pretty.hs  Syntax.hs
Test/: Runner.hs  UnitTests.hs  failing.txt  printFail.txt
Test/examples/: ArrowLayout.hs  Attributes.hs  BadStringLineBreak.hs  BangPatterns.hs  Bug.hs  ByteStringUtils.hs  CParser.hs  CStyleLinePragmas.hs  ClassInstType.hs  ConstraintKinds.hs  DataHeadParen.hs  Directory.hs  DoRec.hs  DoubleHashOp.hs  EmptyAnn.hs  EmptyContext.hs  EmptyList.hs  Ex1.hs  ExplicitNamespaces.hs  ExtraEndBrace.hs  FamilyKindSig.hs  FixityTests.hs  ForallInInstance.hs  ForeignImport.hs  GADTRecord.hs  GadtDeriving.hs  GenericTree.hs  GhcDeriving.hs  GroupKeyword.hs  HappyDoAction.hs  HaskellParser.hs  HexPrec.hs  IfThenElseLayout.hs  ImportSymbol.hs  IndentedTopLevelWhere.hs  IndentedWhere.hs  IndentedWhereBlock.hs  InfixParser.hs  LambdaCase.hs  LanguagePragma.hs  (+35 more)
examples/: Prettify.hs  hse-examples.cabal
roundtrip-config/: blacklist.txt  knownfailures.txt
src/Language/Haskell/: Exts.hs
src/Language/Haskell/Exts/: Annotated.hs  Build.hs  Comments.hs  ExactPrint.hs  ExtScheme.hs  Extension.hs  Fixity.hs  InternalLexer.hs  InternalParser.hs  InternalParser.ly  Lexer.hs  ParseMonad.hs  ParseSyntax.hs  ParseUtils.hs  Parser.hs  Parser.ly  Pretty.hs  SrcLoc.hs  Syntax.hs
src/Language/Haskell/Exts/Annotated/: Build.hs  Comments.hs  ExactPrint.hs  Fixity.hs  Lexer.hs  ParseMonad.hs  ParseUtils.hs  Parser.hs  Parser.ly  Pretty.hs  Simplify.hs  SrcLoc.hs  Syntax.hs
src/Language/Haskell/Exts/Parser/: Text.hs
src/Language/Preprocessor/: Unlit.hs
test/: Main.hs  failing.txt
test/examples/: EmptyInstance.hs  Hyphen.hs  LinePragma.hs  ListComp1.hs  MagicHash.hs  NPlusK.hs  PackageImport.hs  Pragma.hs  Rank2Types.hs  RealHSE.hs  RecordWildcards.hs  ScopedTypeVariables.hs  TypeFunctions.hs  Unicode.hs  WithKeyword.hs
tests/: Extensions.hs  Invariants.hs  PrepareHackage.hs  Roundtrip.hs  Runner.hs  Static.hs  printFail.txt
tests/Test/: Common.hs  CommonUtils.hs
tests/examples/: AmbiguousFixities.hs  AmbiguousFixities.hs.parser.golden  AmbiguousFixities.hs.prettyparser.golden  ArityMismatch.hs  ArityMismatch.hs.parser.golden  ArityMismatch.hs.prettyprinter.golden  ArrowBrackets.hs  ArrowBrackets.hs.parser.golden  ArrowBrackets.hs.prettyprinter.golden  ArrowLayout.hs.exactprinter.golden  ArrowLayout.hs.parser.golden  ArrowLayout.hs.prettyprinter.golden  AtOperator.hs  AtOperator.hs.parser.golden  AtOperator.hs.prettyprinter.golden  AtSign.hs  AtSign.hs.parser.golden  AtSign.hs.prettyprinter.golden  Attributes.hs.parser.golden  Attributes.hs.prettyparser.golden  Attributes.hs.prettyprinter.golden  BadStringLineBreak.hs  BadStringLineBreak.hs.parser.golden  BadStringLineBreak.hs.prettyprinter.golden  BangPatterns.hs.exactprinter.golden  BangPatterns.hs.parser.golden  BangPatterns.hs.prettyprinter.golden  BangViewPat.hs.parser.golden  BangViewPat.hs.prettyprinter.golden  BinaryLiteralsBad.hs  BinaryLiteralsBad.hs.exactprinter.golden  BinaryLiteralsBad.hs.parser.golden  BinaryLiteralsGood.hs  BinaryLiteralsGood.hs.parser.golden  BinaryLiteralsGood.hs.prettyparser.golden  BinaryLiteralsGood.hs.prettyprinter.golden  BlockArguments.hs  BlockArguments.hs.parser.golden  BlockArguments.hs.prettyparser.golden  BlockArguments.hs.prettyprinter.golden  (+752 more)
tests/examples/THTypedSplices/: Defs.hs  Defs.hs.parser.golden  Defs.hs.prettyprinter.golden
